--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -55,9 +55,14 @@ nav {
     z-index: 200;
 }
 
+
 #menuBurgerIcon {
     padding: 0px 8px;
     font-size: 2em;
+}
+
+#menuBurger {
+    margin-top: 80px;
 }
 
 ul#menuBurger {
@@ -85,8 +90,9 @@ ul#menuBurger {
     text-decoration: underline;
 }
 
+
 .hideMenuBurger {
-    top: -300px;
+    top: -380px;
 }
 
 .showMenuBurger {
@@ -137,7 +143,7 @@ ul.menu {
     width: calc(100% - 30px);
     border: none;
     text-align: center;
-    background-color: transparent!important;
+    background-color: rgb(252, 252, 252);
 }
 
 .researchBar input:focus {
